tests/baselines/reference/signatureCombiningRestParameters1.errors.txt
signatureCombiningRestParameters1.ts(17,6): error TS2345: Argument of type 'any' is not assignable to parameter of type 'never'.


==== signatureCombiningRestParameters1.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/58371
    
    type T1 = "A" | "B";
    
    type T2 = {
      C: [string];
      D: [number];
    };
    
    declare const map: {
      [K in T1 | keyof T2]: (...args: K extends keyof T2 ? T2[K] : []) => unknown;
    };
    
    declare const args: any;
    
    for (const [key, fn] of Object.entries(map)) {
      fn(...args);
         ~~~~~~~
!!! error TS2345: Argument of type 'any' is not assignable to parameter of type 'never'.
    }
    
    const test2: ((a: number, ...args: []) => void) &
      ((b: string) => void) &
      ((c: boolean) => void) = (arg) => {};
    